plugins {
    id('java')
}

compileJava {
    options.encoding = 'UTF-8'
    sourceCompatibility = '16'
    targetCompatibility = '16'
    options.compilerArgs << '--release'
    options.compilerArgs << '16'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation('org.apache.commons:commons-math3:3.6.1')
    testImplementation('org.junit.jupiter:junit-jupiter:5.8.2')
}

test {
    useJUnitPlatform()
    testLogging {
        events('failed')
    }
}

